--- a/css/stiloimc.css
+++ b/css/stiloimc.css
@@ -8,7 +8,25 @@ img, table{
 	
 }
 
+a{
+  border:1px black;
+  background-color:white;	
+}
 
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  color:red;
+}
+
+a:active {
+  color:blue;
+}
 fieldset{width:140px;background-color:yellow;}
 
 label {display:block; float:left;}
