--- a/site/src/components/Header/Header.css
+++ b/site/src/components/Header/Header.css
@@ -1,21 +1,26 @@
-.header-container {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    background-color: #4f4f4f;
-    width: 100%;
-    height: 50px;
-}
-
-.header-nav ul {
+div.header-container {
     display: flex;
-    justify-content: space-between;
-    list-style: none;
-    height: 50px;
+    align-items: center;
+    /* justify-content: space-between; */
+
+    width: 100%;
 }
 
-.header-nav ul li a {
-    text-decoration: none;
-    font-size: 18px;
-    color: #fff;
+div.header-container img {
+    width: 214px;
+}
+
+div.header-container .title {
+    margin-right: 20px;
+    /* margin-left: 50px; */
+    padding-left: 40px;
+}
+
+div.header-container .title h1 {
+    color: rgb(64, 64, 240);
+}
+
+div.header-container .title h3,
+h4 {
+    color: rgb(124, 122, 122);
 }
