--- a/site/src/components/Header/Header.css
+++ b/site/src/components/Header/Header.css
@@ -7,7 +7,8 @@ div.header-container {
 }
 
 div.header-container img {
-    width: 214px;
+    width: 230px;
+    border: 2px solid black;
 }
 
 div.header-container .title {
