--- a/site/src/styles/app.css
+++ b/site/src/styles/app.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  width: 900px;
+  width: 950px;
   height: 100%;
   margin: 0 auto;
   background: #ffff;
@@ -11,6 +11,7 @@
 div.container {
   display: flex;
   justify-content: space-between;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
 main.main {
@@ -31,21 +32,148 @@ main.main section h2 {
   align-items: center;
 }
 
+main.main section p {
+  text-align: justify;
+  line-height: 1.6;
+}
+
+main.main section.perfil p {
+  text-indent: 50px;
+}
+
 main.main section div.formacao {
   display: flex;
   margin-left: 40px;
   margin-bottom: 20px;
 }
 
-main.main section div.formacao .periodo {}
-
 main.main section div.formacao .instituicao {
   margin-left: 40px;
 }
 
+.context-app section.sectionExperiencias>h2 {
+  width: 100%;
+  padding: 20px;
+}
 
-main.main section p {
-  font-size: 16px;
+.context-app section.sectionExperiencias h2 {
+  text-align: center;
+  color: #fff;
+  width: 100%;
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  padding: 20px;
+  background-color: #A9A9A9;
+}
+
+.context-app section.sectionExperiencias div.experiencias {
+  padding: 20px;
+  margin-bottom: 10px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+}
+
+.context-app section.sectionExperiencias div.experiencias a {
+  color: #1d45f2;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.context-app section.sectionExperiencias div.experiencias p.funcao {
+  text-indent: 50px;
   text-align: justify;
-  line-height: 1.8;
+  line-height: 1.6;
+  margin-top: 10px;
+}
+
+.context-app section.sectionExperiencias div.experiencias p.trabalhos {
+  padding: 5px 0;
+  border-bottom: 2px solid #5555;
+}
+
+.context-app section.sectionExperiencias div.experiencias div.tecs {
+  font-weight: 500;
+  margin-top: 15px;
+}
+
+.context-app section.sectionExperiencias div.experiencias div.tecs p {
+  padding: 5px 0;
+  border-bottom: 2px solid #5555;
+}
+
+.context-app section.sectionExperiencias div.experiencias div.tecs ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 20px;
+  list-style: none;
+}
+
+.context-app section.sectionExperiencias div.experiencias div.tecs ul li {
+  margin: 20px;
+}
+
+.context-app section.sectionExperiencias div.experiencias div.tecs ul li::before {
+  content: "\2605";
+  /* CSS Code/unicode for a bullet */
+  color: #1d45f2;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
+.context-app h2.projetosGit {
+  text-align: center;
+  color: #fff;
+  width: 100%;
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  padding: 20px;
+  background-color: #A9A9A9;
+}
+
+.context-app section.git {
+  width: 100%;
+  padding: 20px;
+}
+
+.context-app section.git ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.context-app section.git li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  max-width: 300px;
+  height: 100px;
+
+  list-style: none;
+  margin-bottom: 5px;
+  border-radius: 8px;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #dddd;
+}
+
+.context-app section.git li p {
+  margin-right: 15px;
+  max-width: 248px;
+  color: black;
+}
+
+
+.context-app section.git a {
+  text-decoration: none;
+}
+
+.context-app section.git li:hover {
+  margin-left: 10px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  color: #1d45f2;
 }
