--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -2,10 +2,19 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
 
-  font-family: Arial, Helvetica, sans-serif;
+html {
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   background: #dddd;
+  font-size: 18px;
+}
+
+button,
+input {
+  font-family: 'Roboto', sans-serif;
 }
